tests/snapshots/run_wpt_conformance__onnx_split_float16_4D_tensor_number_splits_options_axis.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "split.https.any.js",
    "split float16 4D tensor number splits options.axis",
    "onnx",
    "PASS",
)
