tests/snapshots/run_wpt_conformance__onnx_sqrt_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sqrt.https.any.js",
    "sqrt float16 0D scalar",
    "onnx",
    "PASS",
)
